fixed page section

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,3 +1,3 @@
-<section>
-    <img src="../../../assets/page-top-bg.png" style="width: 100%; position: absolute; top: 0; z-index: -1;" alt="">
-</section>
+
+<app-page-top header="NotHome" imgPageTop="../../../assets/page-top-bg.png"></app-page-top>
+<!-- <app-page-top header="Home" imgPageTop="../../../assets/bg.jpg"></app-page-top> -->
