--- a/frontend/src/app/layouts/header/header.component.html
+++ b/frontend/src/app/layouts/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<header class="header-front">
     <div class="container">
         <div class="header-top pb-2 border-bottom">
             <div class="d-flex justify-content-between">
