update css page top section

--- a/frontend/src/app/layouts/header/header.component.html
+++ b/frontend/src/app/layouts/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="header-front">
     <div class="container">
-        <div class="header-top pb-2 border-bottom">
+        <div class="header-top pb-2 border-bottom mb-3">
             <div class="d-flex justify-content-between">
                 <div class="row w-50">
                     <div class="col-sm-6 col-md-7 col-lg-7 top-info">
