--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,3 +1,5 @@
+<app-page-top [isHomePage]="false" header="NotHome" imgPageTop="../../../assets/page-top-bg.png"></app-page-top>
+<!-- <app-page-top [descriptions]="bindDescriptionsToPagetop" [isHomePage]="true" header="FIND YOUR PLACE WITH OUR LOCAL LIFE STYLE"
+    imgPageTop="../../../assets/bg.jpg">
+</app-page-top> -->
 
-<app-page-top header="NotHome" imgPageTop="../../../assets/page-top-bg.png"></app-page-top>
-<!-- <app-page-top header="Home" imgPageTop="../../../assets/bg.jpg"></app-page-top> -->
