--- a/frontend/src/app/components/page-top/page-top.component.html
+++ b/frontend/src/app/components/page-top/page-top.component.html
@@ -1,6 +1,8 @@
-<section class="page-top-section set-bg">
-    <img src="{{imgPageTop}}" alt="Page Top" class="image-top-section">
-    <div class="header-text" [ngStyle]="{top: isHomePage ? '50%' : '20%'}">
-        <h2 class="text">{{header}}</h2>
+<section class="page-top-section">
+    <img src="{{imgPageTop}}" alt="Page Top" class="set-bg">
+    <div class="header-text" [ngStyle]="{top: isHomePage ? '50%' : '30%'}">
+        <h2 class="">{{header}}</h2>
+        <h5 class="">{{descriptions}}</h5>
+        <a *ngIf="isHomePage" href="#" class="site-btn mt-4">VIEW DETAIL</a>
     </div>
 </section>
