--- a/frontend/src/app/components/page-top/page-top.component.scss
+++ b/frontend/src/app/components/page-top/page-top.component.scss
@@ -2,20 +2,32 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
-}
-.page-top-section {
-	height: 100%;
-}
-.image-top-section {
-//   position: absolute;
-//   top: 0;
-  width: 100%;
-//   height: inherit;
+  max-height: 700px;
 }
 .header-text {
   position: absolute;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 99;
+  color: #fff;
+  text-align: center;
+}
+h2 {
+  font-size: 2.5rem;
+}
+.site-btn {
+  position: relative;
+  display: inline-block;
+  padding: 15px 30px;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 16px;
+  letter-spacing: 2px;
+  border-radius: 3px;
+  min-width: 170px;
+  text-align: center;
+  background: #30caa0;
+  cursor: pointer;
+  border: none;
   color: #fff;
 }
