--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,5 +1,27 @@
-<app-page-top [isHomePage]="false" header="NotHome" imgPageTop="../../../assets/page-top-bg.png"></app-page-top>
-<!-- <app-page-top [descriptions]="bindDescriptionsToPagetop" [isHomePage]="true" header="FIND YOUR PLACE WITH OUR LOCAL LIFE STYLE"
-    imgPageTop="../../../assets/bg.jpg">
-</app-page-top> -->
-
+<!-- <app-page-top [isHomePage]="false" header="NotHome" imgPageTop="../../../assets/page-top-bg.png"></app-page-top> -->
+<app-page-top [descriptions]="bindDescriptionsToPagetop" [isHomePage]="true"
+    header="FIND YOUR PLACE WITH OUR LOCAL LIFE STYLE" imgPageTop="../../../assets/bg.jpg">
+</app-page-top>
+<app-filter-section></app-filter-section>
+<section class="pt-5 mt-5">
+    <div class="container">
+        <div class="section-title text-center">
+            <h3>RECENT PROPERTIES</h3>
+            <p>Discover how much the latest properties have been sold for</p>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <app-property-card srcImage="1.jpg"></app-property-card>
+            </div>
+            <div class="col-md-6">
+                <app-property-card srcImage="2.jpg"></app-property-card>
+            </div>
+            <div class="col-md-6">
+                <app-property-card srcImage="3.jpg"></app-property-card>
+            </div>
+            <div class="col-md-6">
+                <app-property-card srcImage="4.jpg"></app-property-card>
+            </div>
+        </div>
+    </div>
+</section>
