--- a/frontend/src/app/layouts/footer/footer.component.html
+++ b/frontend/src/app/layouts/footer/footer.component.html
@@ -6,11 +6,11 @@
                 <p>Lorem ipsum dolo sit azmet, consecter dipise consult elit. Maecenas mamus antesme non anean a dolor
                     sample tempor nuncest erat.</p>
                 <div class="social">
-                    <a href="#"><i class="fa fa-facebook"></i></a>
-                    <a href="#"><i class="fa fa-twitter"></i></a>
-                    <a href="#"><i class="fa fa-instagram"></i></a>
-                    <a href="#"><i class="fa fa-pinterest"></i></a>
-                    <a href="#"><i class="fa fa-linkedin"></i></a>
+                    <a href="#"><i class="fab fa-facebook"></i></a>
+                    <a href="#"><i class="fab fa-skype"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-linkedin"></i></a>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 footer-widget">
@@ -40,7 +40,7 @@
                     <p>Subscribe your email to get the latest news and new offer also discount</p>
                     <form class="footer-newslatter-form">
                         <input type="text" placeholder="Email address">
-                        <button><i class="fa fa-send"></i></button>
+                        <button><i class="fas fa-paper-plane"></i></button>
                     </form>
                 </div>
             </div>
