--- a/frontend/src/app/components/filter-section/filter-section.component.html
+++ b/frontend/src/app/components/filter-section/filter-section.component.html
@@ -1,6 +1,6 @@
 <div class="filter-section">
-    <div class="container filter-search p-4 pt-1">
-        <form class="form-group">
+    <div class="container filter-search p-3">
+        <form class="">
             <div class="row pt-2">
                 <div class="col-sm-12 col-md-5 col-lg-5">
                     <input class="form-control" type="text"
