--- a/frontend/src/app/layouts/footer/footer.component.html
+++ b/frontend/src/app/layouts/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-3 col-md-6 footer-widget">
-                <img src="img/logo.png" alt="">
+                <img src="" alt="">
                 <p>Lorem ipsum dolo sit azmet, consecter dipise consult elit. Maecenas mamus antesme non anean a dolor
                     sample tempor nuncest erat.</p>
                 <div class="social">
