--- a/frontend/src/app/layouts/header/header.component.html
+++ b/frontend/src/app/layouts/header/header.component.html
@@ -40,7 +40,7 @@
                     </li>
                     <li class="nav-item dropdown" routerLinkActive="active">
                         <a class="nav-link dropdown-toggle text" href="#" id="navbarDropdownProduct" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [routerLink]="['/']">
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [routerLink]="['/featured']">
                             Danh sách nhà
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownProduct">
