--- a/frontend/src/app/components/brand-logo/brand-logo.component.html
+++ b/frontend/src/app/components/brand-logo/brand-logo.component.html
@@ -1,10 +1,10 @@
 <div class="clients-section">
     <div class="container">
-        <owl-carousel [options]="{ items: 4, dots: true, nav: false, autoplay: true, loop: true }"
+        <owl-carousel [options]="options"
             [carouselClasses]="['clients-slider']">
             <a *ngFor="let item of data">
                 <img src={{item}} alt="" style="width: 50%;">
             </a>
         </owl-carousel>
     </div>
-</div>
+</div>  
