--- a/frontend/src/app/components/filter-section/filter-section.component.scss
+++ b/frontend/src/app/components/filter-section/filter-section.component.scss
@@ -14,7 +14,7 @@
         line-height: 16px;
         letter-spacing: 2px;
         border-radius: 3px;
-        min-width: 170px;
+        // min-width: 170px;
         text-align: center;
         background: #000;
         cursor: pointer;
