complete page detail

--- a/frontend/src/app/components/property-card/property-card.component.html
+++ b/frontend/src/app/components/property-card/property-card.component.html
@@ -1,10 +1,16 @@
 <div class="propertie-item set-bg" [ngStyle]="{'background-image': 'url(' + srcImage + ')'}">
     <div class="sale-notic">FOR SALE</div>
     <div class="propertie-info text-white">
-        <div class="info-warp">
-            <h5>176 Kingsberry, Dr Anderson</h5>
-            <p><i class="fa fa-map-marker"></i> Rochester, NY 14626</p>
+        <div class="row">
+            <div class="col-sm-12 col-md-8 col-lg-8">
+                <h5>176 Kingsberry, Dr Anderson</h5>
+                <p><i class="fa fa-map-marker"></i> Rochester, NY 14626</p>
+            </div>
+            <div class="col-sm-12 col-md-4 col-lg-4 my-auto">
+                <div class="price">
+                    $1,777,000
+                </div>
+            </div>
         </div>
-        <div class="price">$1,777,000</div>
     </div>
 </div>
