--- a/frontend/src/app/layouts/header/header.component.html
+++ b/frontend/src/app/layouts/header/header.component.html
@@ -44,7 +44,7 @@
                             Danh sách nhà
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownProduct">
-                            <a class="dropdown-item" [routerLink]="['/']">Product Detail</a>
+                            <a class="dropdown-item" [routerLink]="['/featured/detail']">Product Detail</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown" routerLinkActive="active">
