--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,4 +1,4 @@
-
-  <app-header></app-header>
-  <router-outlet></router-outlet>
-  <app-footer></app-footer>
+<ngx-loading-bar [includeSpinner]="false"></ngx-loading-bar>
+<app-header></app-header>
+<router-outlet></router-outlet>
+<app-footer></app-footer>
