--- a/frontend/src/app/components/breadcrumb/breadcrumb.component.html
+++ b/frontend/src/app/components/breadcrumb/breadcrumb.component.html
@@ -1,1 +1,10 @@
-<p>breadcrumb works!</p>
+<ol class="breadcrumb pt-4 pb-4">
+    <li>
+        <i class="fa fa-home mr-1 pointer" [routerLink]="['/home']"></i>
+    </li>
+    <li *ngFor="let breadcrumb of breadcrumbs, let i = index">
+        <span [routerLink]="breadcrumb.url" [ngClass]="{'disabled': i === breadcrumbs.length-1}">
+            {{ breadcrumb.label }}
+        </span>
+    </li>
+</ol>
