--- a/frontend/src/app/layouts/footer/footer.component.html
+++ b/frontend/src/app/layouts/footer/footer.component.html
@@ -1,3 +1,4 @@
+<app-brand-logo></app-brand-logo>
 <footer class="footer-section set-bg" style="background-image: url(../../../../../assets/footer-bg.jpg);">
     <div class="container">
         <div class="row">
