--- a/frontend/src/app/layouts/footer/footer.component.scss
+++ b/frontend/src/app/layouts/footer/footer.component.scss
@@ -70,8 +70,9 @@
 }
 
 .footer-widget .double-menu-widget ul a:after {
-	font-family: 'FontAwesome';
+	font-family: 'Font Awesome 5 Free';
 	content: "\f101";
+	font-weight: 900;
 	position: absolute;
 	left: -20px;
 	top: 0;
