login and register

--- a/frontend/src/app/layouts/footer/footer.component.html
+++ b/frontend/src/app/layouts/footer/footer.component.html
@@ -39,7 +39,7 @@
                 <div class="newslatter-widget">
                     <h5 class="fw-title">NEWSLETTER</h5>
                     <p>Subscribe your email to get the latest news and new offer also discount</p>
-                    <form class="footer-newslatter-form">
+                    <form [formGroup]="" class="footer-newslatter-form">
                         <input type="text" placeholder="Email address">
                         <button><i class="fas fa-paper-plane"></i></button>
                     </form>
