--- a/frontend/src/app/layouts/header/header.component.html
+++ b/frontend/src/app/layouts/header/header.component.html
@@ -18,8 +18,11 @@
                     </div>
                     <div class="col-sm-6 col-md-5 col-lg-5">
                         <div class="row">
-                            <div class="pr-2 top-info"><i class="far fa-user-circle pr-1"></i>Register</div>
-                            <div class="top-info"><i class="fas fa-sign-in-alt pr-1"></i>Login</div>
+                            <div class="pr-2 top-info" style="cursor: pointer;" [routerLink]="['/register']"><i
+                                    class="far fa-user-circle pr-1"></i>Register</div>
+                            <div class="top-info" [routerLink]="['/login']" style="cursor: pointer;"><i
+                                    class="fas fa-sign-in-alt pr-1"></i>Login
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -40,7 +43,8 @@
                     </li>
                     <li class="nav-item dropdown" routerLinkActive="active">
                         <a class="nav-link dropdown-toggle text" href="#" id="navbarDropdownProduct" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [routerLink]="['/featured']">
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                            [routerLink]="['/featured']">
                             Danh sách nhà
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownProduct">
