ant design test grid

--- a/frontend/src/app/components/page-top/page-top.component.html
+++ b/frontend/src/app/components/page-top/page-top.component.html
@@ -3,8 +3,8 @@
         <img src="{{imgPageTop}}" alt="Page Top" class="set-bg" [ngStyle]="{height: isHomePage? '850px' : '300px'}">
         <!-- [ngStyle]="{'background-image': 'url('+imgPageTop+')'}" -->
         <div class="header-text">
-            <h2 class="">{{header}}</h2>
-            <h5 class="">{{descriptions}}</h5>
+            <h2 class="text-white">{{header}}</h2>
+            <h5 class="text-white">{{descriptions}}</h5>
             <a *ngIf="isHomePage" href="#" class="site-btn mt-4">VIEW DETAIL</a>
         </div>
     </div>
