--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -33,7 +33,7 @@
             </div>
             <div class="col-lg-5 offset-lg-1 pl-lg-0">
                 <div class="section-title text-white">
-                    <h3>OUR SERVICES</h3>
+                    <h3 class="text-white">OUR SERVICES</h3>
                     <p>We provide the perfect service for </p>
                 </div>
                 <div class="services">
@@ -68,7 +68,7 @@
 </section>
 
 <section>
-    <div class="container">
+    <div class="container mt-5">
         <div class="section-title text-center">
             <h3>Featured Listings</h3>
             <p>Browse houses and flats for sale and to rent in your area</p>
@@ -179,7 +179,7 @@
                     <i class="fa fa-star"></i>
                 </div>
                 <p>{{item.descriptions}}</p>
-                <h5>{{item.name}}</h5>
+                <h5 class="text-white">{{item.name}}</h5>
                 <span>{{item.title}}</span>
                 <div class="clint-pic set-bg" style="background-image: url('../../../assets/review/1.jpg');"  [ngStyle]="{'background-image': 'url(../../../../../assets/' + item.img + ')'}"></div>
             </div>
