--- a/frontend/src/app/layouts/footer/footer.component.html
+++ b/frontend/src/app/layouts/footer/footer.component.html
@@ -16,29 +16,30 @@
             </div>
             <div class="col-lg-3 col-md-6 footer-widget">
                 <div class="contact-widget">
-                    <h5 class="fw-title">CONTACT US</h5>
-                    <p><i class="fa fa-map-marker"></i>3711-2880 Nulla St, Mankato, Mississippi </p>
-                    <p><i class="fa fa-phone"></i>(+88) 666 121 4321</p>
-                    <p><i class="fa fa-envelope"></i>info.leramiz@colorlib.com</p>
-                    <p><i class="fa fa-clock-o"></i>Mon - Sat, 08 AM - 06 PM</p>
+                    <h5 class="fw-title">LIÊN HỆ</h5>
+                    <p><i class="fa fa-map-marker"></i>Quang Trung, Gò vấp, Hồ Chí Minh </p>
+                    <p><i class="fa fa-phone"></i>(+84) 98 975 1783</p>
+                    <p><i class="fa fa-envelope"></i>ducptd98@gmail.com</p>
+                    <!-- <p><i class="fa fa-clock-o"></i>Mon - Sat, 08 AM - 06 PM</p> -->
+                    <p><i class="fa fa-clock-o"></i>{{Date.now().toLocaleString()}}</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 footer-widget">
                 <div class="double-menu-widget">
-                    <h5 class="fw-title">POPULAR PLACES</h5>
+                    <h5 class="fw-title">ĐỊA ĐIỂM PHỔ BIẾN</h5>
                     <ul>
-                        <li><a href="">Florida</a></li>
-                        <li><a href="">New York</a></li>
-                        <li><a href="">Washington</a></li>
-                        <li><a href="">Los Angeles</a></li>
-                        <li><a href="">Chicago</a></li>
+                        <li><a href="">TP. Hồ Chí Minh</a></li>
+                        <li><a href="">Hà Nội</a></li>
+                        <li><a href="">Vũng Tàu</a></li>
+                        <li><a href="">Đồng Nai</a></li>
+                        <li><a href="">Bình Dương</a></li>
                     </ul>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6  footer-widget">
                 <div class="newslatter-widget">
-                    <h5 class="fw-title">NEWSLETTER</h5>
-                    <p>Subscribe your email to get the latest news and new offer also discount</p>
+                    <h5 class="fw-title">TIN TỨC</h5>
+                    <p>Theo dỗi tin tức mới nhất tại đây</p>
                     <form [formGroup]="" class="footer-newslatter-form">
                         <input type="text" placeholder="Email address">
                         <button><i class="fas fa-paper-plane"></i></button>
