--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,13 +1,12 @@
-
 <app-page-top [descriptions]="bindDescriptionsToPagetop" [isHomePage]="true"
-    header="FIND YOUR PLACE WITH OUR LOCAL LIFE STYLE" imgPageTop="../../../assets/bg.jpg">
+    header="TÌM NƠI CỦA BẠN VỚI PHONG CÁCH SỐNG ĐỊA PHƯƠNG CỦA CHÚNG TÔI" imgPageTop="../../../assets/bg.jpg">
 </app-page-top>
 <app-filter-section></app-filter-section>
 <section class="pt-5 mt-5">
     <div class="container">
         <div class="section-title text-center">
-            <h3>RECENT PROPERTIES</h3>
-            <p>Discover how much the latest properties have been sold for</p>
+            <h3>DANH SÁCH TIN GẦN ĐÂY</h3>
+            <p>Khám phá bao nhiêu tài sản mới nhất đã được bán với giá</p>
         </div>
         <div class="row">
             <div class="col-md-6">
@@ -33,14 +32,14 @@
             </div>
             <div class="col-lg-5 offset-lg-1 pl-lg-0">
                 <div class="section-title text-white">
-                    <h3 class="text-white">OUR SERVICES</h3>
-                    <p>We provide the perfect service for </p>
+                    <h3 class="text-white">DỊCH VỤ CỦA CHÚNG TÔI</h3>
+                    <p>Chúng tôi cung cấp dịch vụ hoàn hảo cho khách hàng</p>
                 </div>
                 <div class="services">
                     <div class="service-item">
                         <i class="fa fa-comments"></i>
                         <div class="service-text">
-                            <h5>Consultant Service</h5>
+                            <h5>Dịch vụ tư vấn</h5>
                             <p>In Aenean purus, pretium sito amet sapien denim consectet sed urna placerat sodales magna
                                 leo.</p>
                         </div>
@@ -48,7 +47,7 @@
                     <div class="service-item">
                         <i class="fa fa-home"></i>
                         <div class="service-text">
-                            <h5>Properties Management</h5>
+                            <h5>Quản lý tài sản</h5>
                             <p>In Aenean purus, pretium sito amet sapien denim consectet sed urna placerat sodales magna
                                 leo.</p>
                         </div>
@@ -56,7 +55,7 @@
                     <div class="service-item">
                         <i class="fa fa-briefcase"></i>
                         <div class="service-text">
-                            <h5>Renting and Selling</h5>
+                            <h5>Cho thuê và bán</h5>
                             <p>In Aenean purus, pretium sito amet sapien denim consectet sed urna placerat sodales magna
                                 leo.</p>
                         </div>
@@ -70,8 +69,8 @@
 <section>
     <div class="container mt-5">
         <div class="section-title text-center">
-            <h3>Featured Listings</h3>
-            <p>Browse houses and flats for sale and to rent in your area</p>
+            <h3>Danh sách tiêu biểu</h3>
+            <p>Nhà và căn hộ để bán và cho thuê trong khu vực của bạn</p>
         </div>
         <div class="row">
             <div class="col-lg-4 col-md-6">
@@ -99,25 +98,25 @@
 <section class="feature-category-section spad">
     <div class="container">
         <div class="section-title text-center">
-            <h3>LOOKING PROPERTY</h3>
-            <p>What kind of property are you looking for? We will help you</p>
+            <h3>TÀI NGHUYÊN CẦN TÌM</h3>
+            <p>Bạn đang tìm loại tài sản nào? Chúng tôi sẽ giúp bạn</p>
         </div>
         <div class="row text-center">
             <div class="col-lg-3 col-md-6 f-cata">
                 <img src="../../../assets/feature-cate/1.jpg" alt="" class="fit-img">
-                <h5>Apartment for rent</h5>
+                <h5>Căn hộ cho thuê</h5>
             </div>
             <div class="col-lg-3 col-md-6 f-cata">
                 <img src="../../../assets/feature-cate/2.jpg" alt="" class="fit-img">
-                <h5>Family Home</h5>
+                <h5>Nhà dân</h5>
             </div>
             <div class="col-lg-3 col-md-6 f-cata">
                 <img src="../../../assets/feature-cate/3.jpg" alt="" class="fit-img">
-                <h5>Resort Villas</h5>
+                <h5>Resort/Villa</h5>
             </div>
             <div class="col-lg-3 col-md-6 f-cata">
                 <img src="../../../assets/feature-cate/4.jpg" alt="" class="fit-img">
-                <h5>Office Building</h5>
+                <h5>Tòa nhà văn phòng</h5>
             </div>
         </div>
     </div>
@@ -126,8 +125,8 @@
 <section class="gallery-section spad">
     <div class="container">
         <div class="section-title text-center">
-            <h3>Popular Places</h3>
-            <p>We understand the value and importance of place</p>
+            <h3>Địa chỉ phổ biến</h3>
+            <p>Chúng tôi hiểu giá trị của những địa điểm/p>
         </div>
         <div class="gallery">
             <div class="grid-sizer"></div>
@@ -135,30 +134,30 @@
                 <a href="#" class="gallery-item set-bg col-sm-12 col-md-6 col-lg-6">
                     <img src="../../../assets/gallery/1.jpg" alt="" style="width: 100%; height: 100%;">
                     <div class="gi-info">
-                        <h3>New York</h3>
-                        <p>118 Properties</p>
+                        <h3>TP. Hồ Chí Minh</h3>
+                        <p>118 Tin rao</p>
                     </div>
                 </a>
                 <a href="#" class="gallery-item set-bg col-sm-12 col-md-6 col-lg-6">
                     <img src="../../../assets/gallery/2.jpg" alt="" style="width: 100%; height: 100%;">
                     <div class="gi-info">
-                        <h3>Florida</h3>
-                        <p>112 Properties</p>
+                        <h3>Vũng Tàu</h3>
+                        <p>112 Tin rao</p>
                     </div>
                 </a>
 
                 <a href="#" class="gallery-item set-bg col-sm-12 col-md-6 col-lg-6">
                     <img src="../../../assets/gallery/3.jpg" alt="" style="width: 100%; height: 100%;">
                     <div class="gi-info">
-                        <h3>San Jose</h3>
-                        <p>72 Properties</p>
+                        <h3>Đồng Nai</h3>
+                        <p>72 TIn rao</p>
                     </div>
                 </a>
                 <a href="#" class="gallery-item set-bg col-sm-12 col-md-6 col-lg-6">
                     <img src="../../../assets/gallery/4.jpg" alt="" style="width: 100%; height: 100%;">
                     <div class="gi-info">
-                        <h3>St Louis</h3>
-                        <p>50 Properties</p>
+                        <h3>Bình Dương</h3>
+                        <p>50 Tin rao</p>
                     </div>
                 </a>
             </div>
@@ -181,7 +180,8 @@
                 <p>{{item.descriptions}}</p>
                 <h5 class="text-white">{{item.name}}</h5>
                 <span>{{item.title}}</span>
-                <div class="clint-pic set-bg" style="background-image: url('../../../assets/review/1.jpg');"  [ngStyle]="{'background-image': 'url(../../../../../assets/' + item.img + ')'}"></div>
+                <div class="clint-pic set-bg" style="background-image: url('../../../assets/review/1.jpg');"
+                    [ngStyle]="{'background-image': 'url(../../../../../assets/' + item.img + ')'}"></div>
             </div>
         </owl-carousel>
         <!-- <div class="review-slider owl-carousel">
