--- a/frontend/src/app/pages/login/login.component.html
+++ b/frontend/src/app/pages/login/login.component.html
@@ -7,29 +7,29 @@
                 <input formControlName="email" type="email" class="form-control" id="InputEmail1"
                     [ngClass]="{ 'is-invalid': submitted && f.email.errors }" placeholder="Enter email">
                 <div *ngIf="submitted &&f.email.errors" class="invalid-feedback">
-                    <div *ngIf="f.email.errors.required">Email is required</div>
-                    <div *ngIf="f.email.errors.email">Email must be a valid email address format</div>
+                    <div *ngIf="f.email.errors.required">Email là bắt buộc</div>
+                    <div *ngIf="f.email.errors.email">Email không đúng định dạng</div>
                 </div>
             </div>
             <div class="form-group">
-                <label for="exampleInputPassword1">Password</label>
+                <label for="exampleInputPassword1">Mật khẩu</label>
                 <input formControlName="password" type="password" class="form-control" id="exampleInputPassword1"
                     [ngClass]="{ 'is-invalid': submitted && f.password.errors }" placeholder="Password">
                 <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-                    <div *ngIf="f.password.errors.required">Password is required</div>
-                    <div *ngIf="f.password.errors.minlength">Password must be at least 8 characters</div>
-                    <div *ngIf="f.password.errors.wrong">Password wrongs</div>
+                    <div *ngIf="f.password.errors.required">Mật khẩu bắt buộc</div>
+                    <div *ngIf="f.password.errors.minlength">Mật khẩu phải ít nhất 8 kí tự</div>
+                    <div *ngIf="f.password.errors.wrong">Sai mật khẩu</div>
                 </div>
             </div>
             <div *ngIf="submitted && (f.password.errors || f.email.errors)" class="invalid-feedback">
-                <div *ngIf="(f.password.errors.wrong || f.email.errors.wrong)">Password or Email is not correct</div>
+                <div *ngIf="(f.password.errors.wrong || f.email.errors.wrong)">Mật khẩu hoặc email không đúng</div>
             </div>
             <div class="form-check">
                 <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Remember password</label>
+                <label class="form-check-label" for="exampleCheck1">Lưu mật khẩu</label>
             </div>
-            <p class="pt-2">Already our customer? <a [routerLink]="['/register']">Register Now</a></p>
-            <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Submit</button>
+            <p class="pt-2">Already our customer? <a [routerLink]="['/register']">Đăng kí</a></p>
+            <button type="submit" class="btn btn-primary" [disabled]="loginForm.invalid">Đăng nhập</button>
         </form>
     </div>
 </div>
