--- a/frontend/src/app/layouts/footer/footer.component.html
+++ b/frontend/src/app/layouts/footer/footer.component.html
@@ -21,7 +21,7 @@
                     <p><i class="fa fa-phone"></i>(+84) 98 975 1783</p>
                     <p><i class="fa fa-envelope"></i>ducptd98@gmail.com</p>
                     <!-- <p><i class="fa fa-clock-o"></i>Mon - Sat, 08 AM - 06 PM</p> -->
-                    <p><i class="fa fa-clock-o"></i>{{Date.now().toLocaleString()}}</p>
+                    <p><i class="fa fa-clock-o"></i>{{currentTime}}</p>
                 </div>
             </div>
             <div class="col-lg-3 col-md-6 footer-widget">
