--- a/frontend/src/app/layouts/header/header.component.html
+++ b/frontend/src/app/layouts/header/header.component.html
@@ -45,23 +45,35 @@
                         <a class="nav-link dropdown-toggle text" href="#" id="navbarDropdownProduct" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
                             [routerLink]="['/featured']">
-                            Danh sách nhà
+                            Nhà đát tiêu biểu
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownProduct">
                             <a class="dropdown-item" [routerLink]="['/featured/detail']">Product Detail</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown" routerLinkActive="active">
-                        <a class="nav-link dropdown-toggle text" href="#" id="navbarDropdownCollection" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [routerLink]="['/']">
-                            Chúng tôi
+                        <a class="nav-link dropdown-toggle text" href="#" id="navbarDropdownCategory" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                            [routerLink]="['/category']">
+                            Nhà đất bán
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdownCollection">
-                            <a class="dropdown-item" href="#">Collection List</a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownCategory">
+                            <a *ngFor="let itemLv1 of lv1" class="dropdown-item"
+                                [routerLink]="['/category/'+itemLv1.id]">{{itemLv1.category2}}</a>
                         </div>
                     </li>
+                    <!-- <li class="nav-item dropdown" routerLinkActive="active">
+                        <a class="nav-link dropdown-toggle text" href="#" id="navbarDropdownCollection" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" [routerLink]="['/category']">
+                            Nhà đất thuê
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownCollection">
+                            <a *ngFor="let itemLv2 of lv2" class="dropdown-item"
+                            [routerLink]="['/category/'+itemLv2.id]">{{itemLv2.category2}}</a>
+                        </div>
+                    </li> -->
                     <li class="nav-item" routerLinkActive="active">
-                        <a class="nav-link text" href="#" [routerLink]="['/']">
+                        <a class="nav-link text" href="#" [routerLink]="['/home']">
                             Liên hệ
                         </a>
                     </li>
