--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -126,7 +126,7 @@
     <div class="container">
         <div class="section-title text-center">
             <h3>Địa chỉ phổ biến</h3>
-            <p>Chúng tôi hiểu giá trị của những địa điểm/p>
+            <p>Chúng tôi hiểu giá trị của những địa điểm</p>
         </div>
         <div class="gallery">
             <div class="grid-sizer"></div>
