--- a/frontend/src/app/pages/home/home.component.scss
+++ b/frontend/src/app/pages/home/home.component.scss
@@ -137,10 +137,10 @@
   clear: both;
 }
 .gallery-item {
-  width: calc(25% - 20px);
-  height: 285px;
-  display: table;
-  position: relative;
+  // width: calc(25% - 20px);
+  // height: 285px;
+  // display: table;
+  // position: relative;
   float: left;
   margin-bottom: 20px;
 }
