--- a/frontend/src/app/components/page-top/page-top.component.scss
+++ b/frontend/src/app/components/page-top/page-top.component.scss
@@ -2,21 +2,22 @@
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
-  max-height: 850px;
+  max-height: 700px;
   width: 100%;
   position: relative;
 }
 .header-text {
   position: absolute;
   // left: 40%;
-  top: 45%;
-  z-index: 99;
+  top: 50%;
+  z-index: 9;
   color: #fff;
   width: 100%;
   text-align: center;
 }
 h2 {
-  font-size: 2.5rem;
+  padding-top: 20px;
+  font-size: 2rem;
 }
 .site-btn {
   position: relative;
