--- a/frontend/src/app/components/pagination/pagination.component.html
+++ b/frontend/src/app/components/pagination/pagination.component.html
@@ -1,8 +1,8 @@
-<div class="row justify-content-center">
-    <div class="site-pagination pb-5">
-        <span>1</span>
-        <a href="#">2</a>
-        <a href="#">3</a>
-        <a href="#"><i class="fa fa-angle-right"></i></a>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="site-pagination pb-5">
+            <div *ngFor="let key of page | loopNumber" (click)="PageChanged(key)" [ngClass]="{'active': curPage === key}">{{key}}</div>
+            <div><i class="fa fa-angle-right"></i></div>
+        </div>
     </div>
 </div>
