--- a/frontend/src/app/components/pagination/pagination.component.html
+++ b/frontend/src/app/components/pagination/pagination.component.html
@@ -1,9 +1,3 @@
-<div class="container">
-    <div class="row justify-content-center">
-        <div class="site-pagination pb-5">
-            <div *ngFor="let key of page | loopNumber | slice:totalRecord*(curPage-1):(page-1) * totalRecord + totalRecord"
-                (click)="PageChanged(key)" [ngClass]="{'active': curPage === key}">{{key}}</div>
-            <div><i class="fa fa-angle-right"></i></div>
-        </div>
-    </div>
-</div>
+<ngb-pagination [collectionSize]="data.length" [(page)]="curPage" [pageSize]="this.limit" [rotate]="true"
+[boundaryLinks]="true" [maxSize]="6" (pageChange)="PageChanged($event)">
+</ngb-pagination>
