--- a/frontend/src/app/components/pagination/pagination.component.scss
+++ b/frontend/src/app/components/pagination/pagination.component.scss
@@ -1,32 +1,31 @@
-.site-pagination {
-	text-align: center;
+ngb-pagination ::ng-deep .pagination {
+    justify-content: center;
+    text-align: center;
 }
-
-.site-pagination div {
-	width: 40px;
-	height: 40px;
-	display: inline-block;
-	text-align: center;
-	border: 1px solid #e1e1e1;
-	color: #717171;
-	font-size: 18px;
-	padding-top: 4px;
-	margin-right: 15px;
-	-webkit-transition: all 0.4s;
-	-o-transition: all 0.4s;
-	transition: all 0.4s;
-	cursor: pointer;
+ngb-pagination ::ng-deep .pagination a {
+    width: 40px;
+    height: 40px;
+    display: inline-block;
+    text-align: center;
+    border: 1px solid #e1e1e1;
+    color: #717171;
+    font-size: 18px;
+    margin-right: 15px;
+    -webkit-transition: all 0.4s;
+    -o-transition: all 0.4s;
+    transition: all 0.4s;
+    cursor: pointer;
 }
-
-.site-pagination div:hover {
-	color: #30caa0;
-	border-color: #30caa0;
+ngb-pagination ::ng-deep .pagination a:hover {
+    color: #30caa0;
+    border-color: #30caa0;
 }
-
-// .site-pagination a:last-child {
-// 	margin-right: 0;
-// }
-.active {
-	color: #30caa0 !important;
-	border-color: #30caa0 !important;
+ngb-pagination ::ng-deep .page-item.active .page-link {
+    color: #30caa0 !important;
+    border-color: #30caa0 !important;
+    background-color: white !important;
+}
+ngb-pagination ::ng-deep .page-item.disabled .page-link {
+    background-color: #DCDCDC !important;
+    color: black !important;
 }
