--- a/frontend/src/app/pages/featured/featured.component.html
+++ b/frontend/src/app/pages/featured/featured.component.html
@@ -24,5 +24,5 @@
             <app-featured-card srcImage="7.jpg"></app-featured-card>
         </div>
     </div>
-    <app-pagination></app-pagination>
+    <!-- <app-pagination></app-pagination> -->
 </div>
