update list product

--- a/frontend/src/app/pages/home/home.component.html
+++ b/frontend/src/app/pages/home/home.component.html
@@ -1,5 +1,6 @@
 <app-page-top [descriptions]="bindDescriptionsToPagetop" [isHomePage]="true"
-    header="TÌM NƠI CỦA BẠN VỚI PHONG CÁCH SỐNG ĐỊA PHƯƠNG CỦA CHÚNG TÔI" imgPageTop="../../../assets/bg.jpg">
+    header="TÌM NƠI CỦA BẠN VỚI PHONG CÁCH SỐNG ĐỊA PHƯƠNG CỦA CHÚNG TÔI" imgPageTop="../../../assets/bg.jpg"
+    (viewDetail)="click()">
 </app-page-top>
 <app-filter-section></app-filter-section>
 <section class="pt-5 mt-5">
@@ -13,13 +14,13 @@
                 <app-property-card srcImage="products[0].images[0]"></app-property-card>
             </div>
             <div class="col-md-6">
-                <app-property-card srcImage="2.jpg"></app-property-card>
+                <app-property-card srcImage="../../../assets/properties/2.jpg"></app-property-card>
             </div>
             <div class="col-md-6">
-                <app-property-card srcImage="3.jpg"></app-property-card>
+                <app-property-card srcImage="../../../assets/properties/3.jpg"></app-property-card>
             </div>
             <div class="col-md-6">
-                <app-property-card srcImage="4.jpg"></app-property-card>
+                <app-property-card srcImage="../../../assets/properties/4.jpg"></app-property-card>
             </div>
         </div>
     </div>
