--- a/frontend/src/app/components/page-top/page-top.component.html
+++ b/frontend/src/app/components/page-top/page-top.component.html
@@ -5,7 +5,7 @@
         <div class="header-text">
             <h2 class="text-white">{{header}}</h2>
             <h5 class="text-white">{{descriptions}}</h5>
-            <a *ngIf="isHomePage" href="#" class="site-btn mt-4">VIEW DETAIL</a>
+            <a *ngIf="isHomePage" class="site-btn mt-4" (click)="onClick()">VIEW DETAIL</a>
         </div>
     </div>
 </div>
