--- a/frontend/src/app/layouts/header/header.component.html
+++ b/frontend/src/app/layouts/header/header.component.html
@@ -29,7 +29,8 @@
             </div>
         </div>
         <nav class="navbar navbar-expand-lg navbar-dark bg-transparent sticky-top">
-            <a class="navbar-brand text" style="font-size: 1.7rem;" [routerLink]="['/home']">CD</a>
+            <!-- <a class="navbar-brand text" style="font-size: 1.7rem;" [routerLink]="['/home']">CD</a> -->
+            <a href="#" class="site-logo"><img src="../../../assets/image.png" alt="" style="width: 120px; height: 120px;"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
