--- a/frontend/src/app/layouts/header/header.component.scss
+++ b/frontend/src/app/layouts/header/header.component.scss
@@ -1,3 +1,6 @@
+.site-logo {
+  display: inline-block;
+}
 .text-0-8-rem {
   font-size: 0.7rem;
 }
@@ -16,6 +19,7 @@
 .dropdown:hover > .dropdown-menu {
   opacity: 1;
   display: block;
+  top: 30px;
 }
 
 .dropdown > .dropdown-menu.show {
