--- a/frontend/src/app/pages/featured/featured.component.html
+++ b/frontend/src/app/pages/featured/featured.component.html
@@ -2,6 +2,12 @@
 <div class="container">
     <app-breadcrumb></app-breadcrumb>
     <div class="row">
+        <form class="form-inline my-2 my-lg-0">
+            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+        </form>
+    </div>
+    <div class="row">
         <div class="col-sm-12 col-md-4 col-lg-4">
             <app-featured-card srcImage="1.jpg"></app-featured-card>
         </div>
