--- a/frontend/src/app/pages/product/product.component.html
+++ b/frontend/src/app/pages/product/product.component.html
@@ -5,12 +5,43 @@
     </div>
     <div class="" *ngIf="!loading">
         <app-breadcrumb></app-breadcrumb>
+
         <div *ngIf="products.length == 0" class="row justify-content-center">
             <h2>Không có bất kì tin nào</h2>
         </div>
         <div *ngIf="products.length > 0" class="">
-            <ul>
-                <li *ngFor="let item of products">{{item.name}}</li>
+            <form class="form-inline my-2 justify-content-center mb-2">
+                <input class="form-control mr-sm-2" type="search" placeholder="Tìm kiếm ..." aria-label="Search"
+                    style="width: 30%;">
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Tìm kiếm</button>
+            </form>
+            <ul class="list-group">
+                <li class="list-group-item d-flex align-items-center" *ngFor="let item of products">
+                    <div class="row">
+                        <a [routerLink]="['/product/'+cateId+'/detail/'+item.id]"
+                            class="col-md-12 col-sm-12 product-name">{{item.name}}</a>
+                        <div class="col-md-3 col-sm-12">
+                            <div class="image-parent">
+                                <a [routerLink]="['/product/'+cateId+'/detail/'+item.id]">
+                                    <img [src]="item.images[0]" class="img-fluid" alt="quixote"
+                                        style="width: 100%;height: 100%;">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-9 col-sm-12">
+                            <div class="ml-4">
+                                <p>{{item.desc[0]}}</p>
+                                <div>
+                                    <p>
+                                        Diện tích: <span class="value">{{item.area}}</span> <br>
+                                        Giá: <span class="value">{{item.price | parseCurrency }}</span> <br>
+                                        <span class="value">{{item.address}}</span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </li>
             </ul>
             <app-pagination [data]="products" (changePage)="changeCurPage($event)" [curPage]="curPage"></app-pagination>
         </div>
